--- a/public/NotFoundPage/NotFoundPage.html
+++ b/public/NotFoundPage/NotFoundPage.html
@@ -8,7 +8,7 @@
     <title>Web Design Mastery | 404 Not Found Page</title>
     <script>
       function goHome() {
-        window.location.href = '/'; // Adjust the path as needed
+        window.location.href = 'src/app.js'; // Adjust the path as needed
       }
     </script>
   </head>
